<resources>
    <string name="app_name">SellEverything</string>
    <string name="home_toolbar_title">Home</string>
    <string name="detail_toolbar_title">Detail</string>
    <string name="cart_toolbar_title">Keranjang</string>
    <string name="detail_seller">Dijual oleh</string>
    <string name="detail_product_information">Informasi produk</string>
    <string name="detail_weight_title">Berat</string>
    <string name="detail_condition_title">Kondisi</string>
    <string name="detail_min_order_title">Pemesanan Min</string>
    <string name="detail_category_title">Kategori</string>
    <string name="detail_product_description">Deskripsi produk</string>
    <string name="fab_cart">Cart</string>

    <string name="cart_delete_all">Hapus</string>
    <string name="cart_delete_all_confirmation_title">Hapus %s barang?</string>
    <string name="cart_delete_all_confirmation_description">Barang yang kamu pilih akan dihapus dari keranjangmu.</string>
    <string name="cart_delete_confirmation_title">Hapus barang?</string>
    <string name="cart_delete_confirmation_description">Barang ini akan dihapus dari keranjangmu.</string>

    <string name="delete_confirmation_negative_btn">Kembali</string>
    <string name="delete_confirmation_positive_btn">Hapus</string>

    <string name="cart_check_all_with_number">Pilih Semua Barang (%1$s)</string>
    <string name="cart_check_all_no_number">Pilih Semua Barang</string>
    <string name="cart_buy">Beli (%1$s)</string>
    <string name="cart_total_price">Total Harga</string>

    <string name="cart_content_min_qty">1</string>
    <string name="cart_content_zero_qty_validation">Jumlah harus diisi</string>

    <string name="empty_cart_title">Wah, keranjang belanjamu kosong</string>
    <string name="empty_cart_description">Daripada dianggurin, mending isi dengan barang-barang impianmu. Yuk, cek sekarang!</string>
    <string name="empty_cart_start_buying">Mulai Belanja</string>

    <string name="shipping_toolbar_title">Pengiriman</string>
    <string name="shipping_address_title">Alamat Pengiriman</string>
    <string name="shipping_address_hint">Tulis alamat disini</string>
    <string name="shipping_summary_title">Ringkasan belanja</string>
    <string name="shipping_total_products_price_title">Total Harga (%s barang)</string>
    <string name="shipping_total_shipping_price_title">Total Ongkos Kirim</string>
    <string name="shipping_total_price_title">Total Tagihan</string>
    <string name="shipping_choose_payment">Pilih Pembayaran</string>
    <string name="shipping_content_qty">%s barang (%s)</string>
    <string name="shipping_footer_sub_total_title">Subtotal</string>
    <string name="shipping_footer_delivery">Pilih Pengiriman</string>
    <string name="shipping_footer_delivery_courier_text">%s (%s)</string>
    <string name="shipping_address_validation_message">Harap isi alamat pengiriman</string>
    <string name="shipping_delivery_validation_message">Harap pilih pengiriman</string>

    <string name="delivery_bottom_sheet_title">Pilih Pengiriman</string>
    <string name="courier_bottom_sheet_title">Pilih Kurir</string>

    <string name="payment_toolbar_title">Pembayaran</string>
    <string name="payment_payment_type_title">Metode pembayaran</string>
    <string name="payment_see_all_title">Lihat Semua</string>
    <string name="payment_summary_title">Ringkasan pembayaran</string>
    <string name="payment_price_title">Total Tagihan</string>
    <string name="payment_money_used_title">OVO Points Terpakai</string>
    <string name="payment_service_price_title">Biaya Layanan</string>
    <string name="payment_total_price_title">Total Bayar</string>
    <string name="payment_pay_btn">Bayar</string>

    <string name="payment_direct_debit_bri_title">Direct Debit BRI</string>
    <string name="payment_direct_debit_bri_service_price">5000</string>

    <string name="payment_success_title">Pembayaran Berhasil!</string>
    <string name="payment_success_description">Mengalihkan kembali ke Beranda</string>

    <string name="toolbar_with_search_view_hint">Search here</string>

    <string name="menu_cart">Cart</string>
    <string name="menu_search">Search here</string>
    <string name="error_page_title">Somethings Not Right</string>
    <string name="error_page_description">Try to refresh the page</string>
    <string name="error_page_button">Try Again</string>
</resources>