<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_8"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShippingSummaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/shipping_summary_title"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShippingTotalProductsPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/shipping_total_products_price_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShippingSummaryTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShippingTotalProductsPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShippingSummaryTitle"
        tools:text="Rp154.400" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTotalShippingPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/shipping_total_shipping_price_title"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShippingTotalProductsPriceTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShippingPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_16"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShippingTotalProductsPrice"
        tools:text="Rp51.000" />

    <View
        android:id="@+id/vShippingSummarySeparator"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShippingPrice" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShippingTotalPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/shipping_total_price_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnShippingChoosePayment" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShippingTotalPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:textColor="@color/colorOrange"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnShippingChoosePayment"
        app:layout_constraintEnd_toStartOf="@+id/btnShippingChoosePayment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShippingTotalPriceTitle"
        tools:text="Rp538.600" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnShippingChoosePayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_16"
        android:paddingStart="@dimen/margin_32"
        android:paddingTop="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_32"
        android:paddingBottom="@dimen/margin_20"
        android:text="@string/shipping_choose_payment"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorOrange"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vShippingSummarySeparator" />
</androidx.constraintlayout.widget.ConstraintLayout>